# PE-Hackathon-Template-2026

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  locustfile.py  pyproject.toml  seed_data.py  setup_db.py
.github/workflows/: ci.yml
app/: __init__.py  auth.py  cache.py  database.py  logging_config.py  metrics.py  utils.py
app/models/: event.py  url.py  user.py
app/routes/: __init__.py  events.py  redirect.py  urls.py  users.py
discord-webhook/: Dockerfile  server.py
docs/: capacity-plan.md  decision-log.md  deploy-guide.md  failure-modes.md  runbook.md  troubleshooting.md
grafana/dashboards/: url-shortener.json
grafana/provisioning/dashboards/: dashboard.yml
nginx/: nginx.conf
prometheus/: alert-rules.yml  alertmanager.yml  prometheus.yml
tests/fixtures/: events.csv  urls.csv  users.csv
tests/integration/: test_api.py
tests/unit/: test_auth.py  test_cache.py  test_events_route.py  test_health.py  test_logging.py  test_metrics.py  test_models.py  test_redirect_route.py  test_seed_data.py  test_urls_route.py  test_users_route.py  test_utils.py
