[project]
name = "mlh-pe-hackathon"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "faker>=33.0",
    "flask>=3.1",
    "flask-limiter>=4.1.1",
    "gunicorn>=25.3.0",
    "locust>=2.43.4",
    "peewee>=3.17",
    "prometheus-client>=0.24.1",
    "psycopg2-binary>=2.9",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.0",
    "redis>=7.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
